<resources>
    <string name="app_name">Öğrenci Eşleşme</string>
    <string name="email">E-posta</string>
    <string name="password">Şifre</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="login">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="change_password">Şifre Değiştir</string>
    <string name="grad_year_text">Mezuniyet Yılı</string>
    <string name="go_back">Geri Dön</string>
    <string name="full_app_logo">Full app logo</string>
    <string name="enrollment_year">Giriş Yılı</string>
    <string name="set_profile_pic">Fotoğraf Yükle</string>
    <string name="profilepic_update">Profil resmi yüklemek için basınız.</string>
    <string name="select_photo">Resim Seç</string>
    <string name="lisans">Lisans</string>
    <string name="lisans_ustu">Lisans Üstü</string>
    <string name="doktora">Doktora</string>
    <string name="phone_number">Telefon Numarası</string>
    <string name="company">Şirket</string>
    <string name="city">Şehir</string>
    <string name="country">Ülke</string>
    <string name="save_profile">Profili Kaydet</string>
    <string name="education_level">Eğitim Durumu</string>
    <string name="update_profile">Profili Güncelle</string>
    <string name="go_back_to_main">Ana Menüye Dön</string>
    <string name="my_profile">Profilim</string>
    <string name="grad_search">Mezun Arama</string>
    <string name="noticeboard">Duyurular</string>
    <string name="media_wall">Paylaşımlar</string>
    <string name="name_surname">Ad Soyad</string>
    <string name="job">Çalıştığı Yer</string>
    <string name="unemployed">İşsiz</string>
    <string name="unspecified">Belirtilmemiş</string>
    <string name="search">Ara</string>
    <string name="date">Tarih</string>
    <string name="headline">Başlık</string>
    <string name="create_new_notice">Yeni Duyuru Oluştur</string>
    <string name="date_of_today">Bugünün Tarihi</string>
    <string name="select_end_date">Bitiş Tarihi</string>
    <string name="enter_headling">Başlık</string>
    <string name="notice">Duyuru</string>
    <string name="notice_date">Duyuru Tarihi</string>
    <string name="notice_expiration_date">Duyuru Bitiş Tarihi</string>
    <string name="remove_media">Medyayı Kaldır</string>
    <string name="upload_media">Medya Yükle</string>
    <string name="upload">Yükle</string>
    <string name="image_description">Resim açıklaması</string>
    <string name="cancel">İptal Et</string>
    <string name="reset">Sıfırla</string>
    <string name="department">Bölüm</string>
    <string name="year_class">Sınıf</string>
    <string name="distance_to_campus">Kampüse Uzaklık (dk)</string>
    <string name="status">Durum</string>
    <string name="duration">Oturma Süresi (ay)</string>
    <string name="looking_for_roommate">Ev Arkadaşı Arıyor</string>
    <string name="looking_for_home">Ev Arıyor</string>
    <string name="not_looking">Aramıyor</string>
    <string name="search_from_map">Harita Üzerinden Ara</string>
    <string name="requests">İstekler</string>
    <string name="search_from_list">Öğrenci arama</string>
    <string name="send_match_request">Eşleşme Yolla</string>
    <string name="already_sent_match_request">Zaten eşleşme isteği yollanmış.</string>
    <string name="accept">Kabul Et</string>
    <string name="reject">Reddet</string>
    <string name="withdraw">Geri Çek</string>
</resources>