<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:id="@+id/register_i_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_logo_full"
        android:contentDescription="@string/full_app_logo"/>


    <EditText
        android:id="@+id/register_et_name"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_i_logo"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/register_et_surname"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/surname"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_et_name"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/register_et_email"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_et_surname"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/register_et_password"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_et_email"
        android:layout_marginTop="10dp" />


    <Button
        android:id="@+id/register_b_register"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_et_password" />

    <Button
        android:id="@+id/register_r_goback"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_b_register"
        android:layout_marginTop="10dp" />

    <ProgressBar
        android:id="@+id/register_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_r_goback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="2dp"
        android:visibility="gone"

        />

</androidx.constraintlayout.widget.ConstraintLayout>