<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/change_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/forgot_password_et_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/forgot_password_b_cancel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/forgot_password_b_reset"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/forgot_password_b_reset"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/reset"
        app:layout_constraintStart_toEndOf="@id/forgot_password_b_cancel"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_et_email"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>