<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/login_i_logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_logo_full"
        android:contentDescription="@string/full_app_logo"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_etil_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_i_logo"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/login_et_mail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_etil_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_etil_email"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_b_login"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_etil_password"
        android:layout_marginTop="20dp"/>


    <Button
        android:id="@+id/login_b_change_password"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_b_login"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/login_b_go_back"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_b_change_password"
        android:layout_marginTop="10dp" />

    <ProgressBar
        android:id="@+id/login_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>




</androidx.constraintlayout.widget.ConstraintLayout>