<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StartActivity">

    <LinearLayout
        android:id="@+id/start_ll_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_i_logo"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/start_b_register"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/register" />

        <Button
            android:id="@+id/start_b_login"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/login" />
    </LinearLayout>

    <ImageView
        android:id="@+id/start_i_logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/main_logo_full"
        android:contentDescription="@string/full_app_logo"/>

</androidx.constraintlayout.widget.ConstraintLayout>