<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_userInfo"
        android:layout_width="185dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">



        <ImageView
            android:id="@+id/main_userInfo_profilepic"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/empty_profile_pic"
            android:padding="5dp"/>

        <ProgressBar
            android:id="@+id/main_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/main_userInfo_profilepic"
            app:layout_constraintBottom_toBottomOf="@id/main_userInfo_profilepic"
            app:layout_constraintStart_toStartOf="@id/main_userInfo_profilepic"
            app:layout_constraintEnd_toEndOf="@id/main_userInfo_profilepic"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/main_userInfo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Ad Soyad"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/main_userInfo_profilepic"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/main_applogo"
        android:layout_width="185dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/main_logo_full" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_userInfo">


        <Button
            android:id="@+id/main_b_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/my_profile" />

        <Button
            android:id="@+id/main_button_user_search"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@id/main_b_profile"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/search_from_list" />

        <Button
            android:id="@+id/main_button_search_from_map"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/main_b_profile"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/search_from_map" />

        <Button
            android:id="@+id/main_button_incoming_requests"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/main_button_user_search"
            app:layout_constraintStart_toEndOf="@id/main_button_search_from_map"
            android:text="@string/requests" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>