<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="5dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_cl"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        >


        <ImageView
            android:id="@+id/item_profilepic"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/item_name_surname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/empty_profile_pic"
            android:padding="3dp"/>

        <TextView
            android:id="@+id/item_name_surname"
            android:layout_width="125dp"
            android:layout_height="25dp"
            android:text="@string/name_surname"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_profilepic"
            app:layout_constraintEnd_toStartOf="@id/item_status"
            app:layout_constraintBottom_toTopOf="@id/item_department"
            android:paddingStart="10dp"/>

        <TextView
            android:id="@+id/item_status"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:text="@string/status"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_name_surname"
            app:layout_constraintBottom_toTopOf="@id/item_department"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="10dp"/>

        <TextView
            android:id="@+id/item_department"
            android:layout_width="125dp"
            android:layout_height="25dp"
            android:text="@string/department"
            app:layout_constraintStart_toEndOf="@id/item_profilepic"
            app:layout_constraintTop_toBottomOf="@id/item_name_surname"
            android:paddingStart="10dp"/>

        <TextView
            android:id="@+id/item_year_class"
            android:layout_width="125dp"
            android:layout_height="25dp"
            android:text="Sınıf"
            app:layout_constraintStart_toEndOf="@id/item_profilepic"
            app:layout_constraintTop_toBottomOf="@id/item_department"
            android:paddingStart="10dp"/>

        <TextView
            android:id="@+id/item_distance_to_campus"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:text=""
            app:layout_constraintStart_toEndOf="@id/item_department"
            app:layout_constraintTop_toBottomOf="@id/item_name_surname"
            app:layout_constraintBottom_toTopOf="@id/item_duration"
            android:paddingStart="10dp"/>


        <TextView
            android:id="@+id/item_duration"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:text=""
            app:layout_constraintStart_toEndOf="@id/item_department"
            app:layout_constraintTop_toBottomOf="@id/item_distance_to_campus"
            android:paddingStart="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>